[gd_scene load_steps=4 format=3 uid="uid://c7miktq3w3662"]

[ext_resource type="Script" path="res://bee_base/bee_base.gd" id="1_81erx"]
[ext_resource type="Texture2D" uid="uid://1xhph5iwwwfx" path="res://assets/bee.png" id="2_5b1so"]

[sub_resource type="CircleShape2D" id="CircleShape2D_06yha"]
radius = 2.0

[node name="BeeBase" type="Node2D"]
script = ExtResource("1_81erx")

[node name="BeeBody" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0

[node name="Sprite2D" type="Sprite2D" parent="BeeBody"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_5b1so")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeeBody"]
visible = false
shape = SubResource("CircleShape2D_06yha")

[node name="Label" type="Label" parent="BeeBody"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -49.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0
text = "Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JitterTimer" type="Timer" parent="BeeBody"]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="BeeBody/JitterTimer" to="." method="_on_jitter_timer_timeout"]
